--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div class="thf-wrapper">
-  <thf-toolbar t-title="TOCAI sample"></thf-toolbar>
+  <thf-toolbar t-title="TOCAI"></thf-toolbar>
 </div>
