--- a/src/app/initial-page/initial-page.component.html
+++ b/src/app/initial-page/initial-page.component.html
@@ -1,5 +1,32 @@
-<p>
-  initial-page works!
-</p>
+<thf-page-default t-title="TOCAI">
 
-<button (click)="mockCall();">LOGIN MOCK</button>
+  <div class="thf-row">
+    <div class="thf-md-12">
+      <h1 class="thf-font-display">Pulsando no ritmo do seu evento</h1>
+    </div>
+  </div>
+
+  <div class="thf-row thf-pt-3">
+    <div class="thf-md-6">
+      <span class="thf-font-subtitle">Faça acontecer</span>
+      <p>Encontre oportunidades perto de você, para mostrar o seu talento.</p>
+
+      <thf-button
+        class="thf-md-6 thf-pt-2 thf-pl-0"
+        t-label="Entre para se apresentar"
+        (t-click)="onClick()">
+      </thf-button>
+    </div>
+
+    <div class="thf-md-6 thf-pt-sm-2">
+      <span class="thf-font-subtitle">Contrate</span>
+      <p>Dê vida ao seu evento, contrate um serviço, tudo pelo seu telefone.</p>
+
+      <thf-button
+        class="thf-md-6 thf-pt-2 thf-pl-0"
+        t-label="Entre para contratar"
+        (t-click)="onClick()">
+      </thf-button>
+    </div>
+  </div>
+</thf-page-default>
