add thf-icon-arrow-rigth in thf-button

--- a/src/app/initial-page/initial-page.component.html
+++ b/src/app/initial-page/initial-page.component.html
@@ -13,6 +13,7 @@
 
       <thf-button
         class="thf-md-6 thf-pt-2 thf-pl-0"
+        t-icon="thf-icon-arrow-right"
         t-label="Entre para se apresentar"
         (t-click)="onClick()">
       </thf-button>
@@ -24,6 +25,7 @@
 
       <thf-button
         class="thf-md-6 thf-pt-2 thf-pl-0"
+        t-icon="thf-icon-arrow-right"
         t-label="Entre para contratar"
         (t-click)="onClick()">
       </thf-button>
