initial-page layout

--- a/src/app/initial-page/initial-page.component.html
+++ b/src/app/initial-page/initial-page.component.html
@@ -1,16 +1,15 @@
-<thf-page-default t-title="TOCAI">
-
-  <div class="thf-row">
+<div class="container">
+  <div class="thf-row thf-pt-2 thf-pl-sm-2 thf-pr-sm-2 thf-pl-3 thf-pr-3">
     <div class="thf-md-12">
       <h1 class="thf-font-display">Pulsando no ritmo do seu evento</h1>
     </div>
   </div>
-
-  <div class="thf-row thf-pt-3">
+  
+  <div class="thf-row thf-pt-3 thf-pb-3 thf-pl-sm-2 thf-pr-sm-2 thf-pl-3 thf-pr-3">
     <div class="thf-md-6">
       <span class="thf-font-subtitle">Faça acontecer</span>
       <p>Encontre oportunidades perto de você, para mostrar o seu talento.</p>
-
+  
       <thf-button
         class="thf-md-6 thf-pt-2 thf-pl-0"
         t-icon="thf-icon-arrow-right"
@@ -18,11 +17,11 @@
         (t-click)="onClick()">
       </thf-button>
     </div>
-
+  
     <div class="thf-md-6 thf-pt-sm-2">
       <span class="thf-font-subtitle">Contrate</span>
       <p>Dê vida ao seu evento, contrate um serviço, tudo pelo seu telefone.</p>
-
+  
       <thf-button
         class="thf-md-6 thf-pt-2 thf-pl-0"
         t-icon="thf-icon-arrow-right"
@@ -31,4 +30,5 @@
       </thf-button>
     </div>
   </div>
-</thf-page-default>
+</div>
+<app-footer></app-footer>
