pages login - customer and partners

--- a/src/app/initial-page/initial-page.component.css
+++ b/src/app/initial-page/initial-page.component.css
@@ -3,8 +3,11 @@
   height: auto;
   min-height: 100%;
   padding-bottom: 250px;
+  background-color: #fbfbfb;
 }
 
-body {
-  background-color: #fbfbfb;
+.container-fluid {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
