--- a/src/app/signup-partners/signup-partners.component.html
+++ b/src/app/signup-partners/signup-partners.component.html
@@ -57,6 +57,25 @@
       </thf-input>
     </div>
 
+    <div class="thf-row">
+      <thf-input
+        class="thf-md-6"
+        t-clean
+        t-icon="thf-icon-last-page"
+        t-label="Link youtube"
+        t-required>
+      </thf-input>
+
+      <thf-input
+        class="thf-md-6"
+        t-clean
+        t-icon="thf-icon-last-page"
+        t-label="Link spotify"
+        t-required>
+      </thf-input>
+
+    </div>
+
     <div class="thf-row thf-pt-3">
       <thf-button
         class="thf-md-4"
