forgot password / initial page refactory / musical list and detail

--- a/src/app/initial-page/initial-page.component.html
+++ b/src/app/initial-page/initial-page.component.html
@@ -7,9 +7,9 @@
     </div>
       
     <div class="thf-row thf-pt-3 thf-pb-3 thf-pl-sm-2 thf-pr-sm-2 thf-pl-3 thf-pr-3">
-      <div class="thf-md-6">
+      <div class="thf-md-6 thf-mt-4 thf-mt-sm-2">
         <span class="thf-font-subtitle">Seja um parceiro</span>
-        <p>Encontre oportunidades perto de você, e mostre todo o seu talento.</p>
+        <p>Receba mais contatos divulgando seu talento com a gente.</p>
     
         <div class="thf-pt-3">
           <thf-button
@@ -20,9 +20,9 @@
         </div>
       </div>
     
-      <div class="thf-md-6 thf-pt-sm-2">
+      <div class="thf-md-6  thf-mt-4 thf-mt-sm-2">
         <span class="thf-font-subtitle">Seja um cliente</span>
-        <p>Dê vida ao seu evento, contrate um serviço, tudo pelo seu smartphone.</p>
+        <p>O som que você procura está aqui, confira em nossa plataforma.</p>
     
         <div class="thf-pt-3">
           <thf-button
@@ -80,7 +80,7 @@
 
     <div class="thf-row">
       <div class="thf-page-login-recovery-link">
-        <a class="thf-font-text-large-bold" (click)="signUp(true)">Esqueci minha senha</a>
+        <a class="thf-font-text-large-bold" (click)="forgotPassword(true)">Esqueci minha senha</a>
       </div>
     </div>
 
@@ -162,7 +162,7 @@
 
     <div class="thf-row">
       <div class="thf-page-login-recovery-link">
-        <a class="thf-font-text-large-bold" (click)="mockCall()">Esqueci minha senha</a>
+        <a class="thf-font-text-large-bold" (click)="forgotPassword();">Esqueci minha senha</a>
       </div>
     </div>
 
