--- a/src/app/musical-list-detail/musical-list-detail.component.html
+++ b/src/app/musical-list-detail/musical-list-detail.component.html
@@ -3,7 +3,7 @@
   <div class="thf-row">
     <div class="name-default container thf-md-12">
       <div class="thf-font-display thf-mt-5">Jorge e Mateus oficial</div>
-      <div class="thf-font-text-large">Entre em contato e aproveite este talento</div>
+      <div class="thf-font-text-subtitle">Entre em contato e aproveite este talento</div>
     </div>
   </div>
 
@@ -32,7 +32,9 @@
 
         <div class="thf-font-title thf-mt-4">CONTATOS</div>
         <div class="thf-font-text-uppercase">Telefone: (11) 96345-7288</div>
-        <div class="thf-font-text-uppercase thf-mb-2">E-mail: jm.oficial@gmail.com</div>
+        <div class="thf-font-text-uppercase thf-mb-2">E-mail: 
+          <a class="color-link" href="mailto:jm.oficial@gmail.com">jm.oficial@gmail.com</a>
+        </div>
 
       </div>
 
