--- a/src/app/signup-partners/signup-partners.component.html
+++ b/src/app/signup-partners/signup-partners.component.html
@@ -76,6 +76,16 @@
 
     </div>
 
+    <div class="thf-row">
+      <thf-select
+        name="change"
+        class="thf-md-6"
+        t-icon="thf-icon-change"
+        t-label="Disponibilidade de viagem"
+        [t-options]="[{label: 'Sim', value: '1'}, {label: 'Não', value: '2'}]">
+      </thf-select>
+    </div>
+
     <div class="thf-row thf-pt-3">
       <thf-button
         class="thf-md-4"
