doubts component and history component

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,14 +9,14 @@
     <div class="thf-md-6 thf-pl-sm-2 thf-pr-sm-2 thf-pl-3 thf-pr-3 thf-pb-1 thf-pt-1">
       <h1 class="thf-font-subtitle thf-pt-2 thf-pt-sm-3">Estamos aqui para ajudar</h1>
       <div class="thf-md-12 thf-pt-3 thf-pl-0">
-        <a href="#" class="thf-font-text-uppercase footer-item-link footer-link-color">
+        <a [routerLink]="['/doubts']" class="thf-font-text-uppercase footer-item-link footer-link-color">
           dúvidas frequentes
           <span class="thf-icon thf-icon-arrow-right"></span>
         </a>
       </div>
       <div class="thf-md-12 thf-pt-3 thf-pl-0">
-        <a href="#" class="thf-font-text-uppercase footer-item-link footer-link-color">
-          blog
+        <a [routerLink]="['/history']"  class="thf-font-text-uppercase footer-item-link footer-link-color">
+          quem somos
           <span class="thf-icon thf-icon-arrow-right"></span>
         </a>
       </div>
