--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -57,6 +57,9 @@
 
   <ng-template #partners>
     <div>
+
+      <div class="thf-font-title thf-mb-2 thf-mt-0">Altere seus dados e aumente a chance de receber contatos.</div>
+
       <form #signupPartnersForm="ngForm">
 
         <div class="thf-row">
