--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -8,6 +8,8 @@
       
       <thf-password
         class="thf-lg-6"
+        name="password"
+        [(ngModel)]="userData.password"
         t-clean
         t-label="Senha atual"
         t-required>
@@ -15,6 +17,8 @@
 
       <thf-password
         class="thf-lg-6"
+        name="newpassword"
+        [(ngModel)]="userData.newpassword"
         t-clean
         t-label="Nova senha"
         t-required>
@@ -22,10 +26,21 @@
 
       <thf-password
         class="thf-lg-6"
+        name="confirmpassword"
+        [(ngModel)]="userData.confirmpassword"
         t-clean
         t-label="Confirmar nova senha"
         t-required>
       </thf-password>
+
+      <thf-email
+        class="thf-lg-6"
+        name="email"
+        [(ngModel)]="userData.email"
+        t-clean
+        t-label="Email"
+        t-required>
+      </thf-email>
       
     </div>
     
@@ -35,7 +50,7 @@
         t-label="Confirmar"
         t-type="primary"
         [t-disabled]="signupCustomersForm.invalid"
-        (t-click)="mockCall();">
+        (t-click)="changePassword('1');">
       </thf-button>
     </div>
   </form>
