--- a/src/app/initial-page/initial-page.component.html
+++ b/src/app/initial-page/initial-page.component.html
@@ -57,7 +57,7 @@
     </div>
   
     <div class="thf-row thf-pb-1">
-      <thf-input
+      <thf-password
         class="thf-md-12"
         name="password"
         [(ngModel)]="password"
@@ -65,7 +65,7 @@
         t-icon="thf-icon-lock"
         t-placeholder="Informe sua senha"
         t-required>
-      </thf-input>
+      </thf-password>
     </div>
   
     <div class="thf-row">
@@ -139,7 +139,7 @@
     </div>
   
     <div class="thf-row thf-pb-1">
-      <thf-input
+      <thf-password
         class="thf-md-12"
         name="password"
         [(ngModel)]="password"
@@ -147,7 +147,7 @@
         t-icon="thf-icon-lock"
         t-placeholder="Informe sua senha"
         t-required>
-      </thf-input>
+      </thf-password>
     </div>
   
     <div class="thf-row">
