--- a/src/app/musical-list-detail/musical-list-detail.component.html
+++ b/src/app/musical-list-detail/musical-list-detail.component.html
@@ -2,7 +2,7 @@
 
   <div class="thf-row">
     <div class="name-default container thf-md-12">
-      <div class="thf-font-display thf-mt-5">Jorge e Mateus oficial</div>
+      <div class="thf-font-display thf-mt-5">{{ objectDetail.name }}</div>
       <div class="thf-font-text-subtitle">Entre em contato e aproveite este talento</div>
     </div>
   </div>
@@ -14,26 +14,26 @@
       <div class="container thf-md-12">
 
         <div class="thf-font-title thf-mt-4 thf-mt-4">PERFIL MUSICAL</div>
-        <div class="thf-font-text-uppercase">Sertanejo</div>
+        <div class="thf-font-text-uppercase">{{ objectDetail.musicalstyle }}</div>
 
         <div class="thf-font-title thf-mt-4">CANAL NO YOUTUBE</div>
         <div class="thf-font-text-large-bold color-link">
-          <a href="https://www.youtube.com/watch?v=fggtYUdTMWk">
-            https://www.youtube.com/watch?v=fggtYUdTMWk
+          <a href="{{ objectDetail.linkyoutube }}">
+            {{ objectDetail.linkyoutube }}
           </a>
         </div>
 
         <div class="thf-font-title thf-mt-4">SPOTIFY</div>
         <div class="thf-font-text-large-bold color-link thf-mb-4">
-          <a href="https://www.youtube.com/watch?v=fggtYUdTMWk">
-            https://www.youtube.com/watch?v=fggtYUdTMWk
+          <a href="{{ objectDetail.linkspotify }}">
+            {{ objectDetail.linkspotify }}
           </a>
         </div>
 
         <div class="thf-font-title thf-mt-4">CONTATOS</div>
-        <div class="thf-font-text-uppercase">Telefone: (11) 96345-7288</div>
+        <div class="thf-font-text-uppercase">Telefone: {{ objectDetail.telefone }}</div>
         <div class="thf-font-text-uppercase thf-mb-2">E-mail: 
-          <a class="color-link" href="mailto:jm.oficial@gmail.com">jm.oficial@gmail.com</a>
+          <a class="color-link" href="mailto:{{ objectDetail.email }}">{{ objectDetail.email }}</a>
         </div>
 
       </div>
